fix: adjust layout properties for improved alignment and spacing

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,13 +7,12 @@
   width: 100vw;
   height: 98vh;
   display: flex;
-  justify-content: flex-start;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  /* padding: 0.7rem; */
+  padding: 0.7rem;
   color: black;
-  /* background-color: white; */
-  gap: 2.2rem;
+  gap: 2.3rem;
 }
 p {
   padding: 0.6rem;
@@ -21,7 +20,6 @@ p {
   /* background-color: #5dade2; */
   background-color: #a3d5f7;
   color: #003366;
-  margin-top: 1rem;
   border-radius: 1rem;
   width: 50%;
   text-align: center;
